@@ -18,7 +18,7 @@ bind LCtrl+LAlt+G "toggle debug_grid true false"
 bind LCtrl+LAlt+A "toggle debug_axis true false"
 bind LCtrl+LAlt+U "toggle debug_ui true false"
 
-bind F8 "script_run_string \"ui_manager:get_widget( \\\"StartScreen\\\" ):show()\""
-bind F9 "script_run_string \"ui_manager:get_widget( \\\"StartScreen\\\" ):hide()\""
+bind F8 "script_run_string \"ui_manager:get_widget( \\\"TestScreen\\\" ):show()\""
+bind F9 "script_run_string \"ui_manager:get_widget( \\\"TestScreen\\\" ):hide()\""
 
 bind F12 "screenshot"
